--- a/public/experience/job-3/index.html
+++ b/public/experience/job-3/index.html
@@ -118,7 +118,7 @@ Created and managed schedules, communicated with clients and other stakeholders,
 
  <section id="breadcrumb-bar" class="breadcrumb-bar container">
         <ul class="breadcrumbs">
-            <li class="breadcrum-item"><span><a href="/">Home</a></span></li><li class="breadcrum-item"><span><a href="/experience">Experience</a></span></li><li class="breadcrum-item current">Job #3</li></ul>
+            <li class="breadcrum-item"><span><a href="/">Home</a></span></li><li class="breadcrum-item"><span><a href="/experience">Experience</a></span></li><li class="breadcrum-item current">Project Manager</li></ul>
 </section> 
 
 
