--- a/public/experience/job-4/index.html
+++ b/public/experience/job-4/index.html
@@ -118,7 +118,7 @@ Created 3D models for the construction of prefabricated slab elements. Analyzed 
 
  <section id="breadcrumb-bar" class="breadcrumb-bar container">
         <ul class="breadcrumbs">
-            <li class="breadcrum-item"><span><a href="/">Home</a></span></li><li class="breadcrum-item"><span><a href="/experience">Experience</a></span></li><li class="breadcrum-item current">Job #4</li></ul>
+            <li class="breadcrum-item"><span><a href="/">Home</a></span></li><li class="breadcrum-item"><span><a href="/experience">Experience</a></span></li><li class="breadcrum-item current">Electrical Designer</li></ul>
 </section> 
 
 
