--- a/public/experience/job-1/index.html
+++ b/public/experience/job-1/index.html
@@ -117,7 +117,7 @@
 
  <section id="breadcrumb-bar" class="breadcrumb-bar container">
         <ul class="breadcrumbs">
-            <li class="breadcrum-item"><span><a href="/">Home</a></span></li><li class="breadcrum-item"><span><a href="/experience">Experience</a></span></li><li class="breadcrum-item current">Job #1</li></ul>
+            <li class="breadcrum-item"><span><a href="/">Home</a></span></li><li class="breadcrum-item"><span><a href="/experience">Experience</a></span></li><li class="breadcrum-item current">Electrician</li></ul>
 </section> 
 
 
