name change and pic

--- a/public/index.html
+++ b/public/index.html
@@ -282,14 +282,14 @@
         
         
         <picture class="picture-works odd">
-          <source srcset="/images/works/ecs_hu4865234179637744508.webp 1x, /images/works/ecs_hu4865234179637744508.webp 2x" type="image/webp" />
-          <source srcset="/images/works/ecs.webp 1x, /images/works/ecs.webp 2x" type="image/webp">
+          <source srcset="/images/ecs/demo_hu12082542630188791657.webp 1x, /images/ecs/demo_hu12082542630188791657.webp 2x" type="image/webp" />
+          <source srcset="/images/ecs/demo.png 1x, /images/ecs/demo.png 2x" type="image/webp">
           <img
             class="lozad img-responsive"
             src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-            srcset="/images/works/ecs.webp 1x, /images/works/ecs.webp 2x"
-            data-src="/images/works/ecs.webp"
-            data-srcset="/images/works/ecs.webp 1x, /images/works/ecs.webp 2x"
+            srcset="/images/ecs/demo.png 1x, /images/ecs/demo.png 2x"
+            data-src="/images/ecs/demo.png"
+            data-srcset="/images/ecs/demo.png 1x, /images/ecs/demo.png 2x"
             alt=""
           />
         </picture>
