--- a/public/index.html
+++ b/public/index.html
@@ -298,7 +298,7 @@
           <p>During our second year, I designed and implemented my own Archetype-based ECS in my own game engine.</p>
 
         </p>
-        <a href="https://williamarnberg.github.io/Portfolio/articles/ecs_article/" class="btn btn-primary"
+        <a href="https://williamarnberg.com/articles/ecs_article/" class="btn btn-primary"
           >Read More<i class="icon-arrow-right"></i
         ></a>
       </div>
