--- a/public/experience/index.html
+++ b/public/experience/index.html
@@ -204,7 +204,7 @@
     
     <div class="col-12 col-lg-4">
       <a
-        href='http://localhost:1313/william_arnberg_cv.pdf'
+        href='http://localhost:1313/cv/william_arnberg_cv.pdf'
         class="btn btn-frameless  w-100"
         target="_blank"
         rel="noopener noreferrer"
