fixed http link

--- a/public/experience/job-2/index.html
+++ b/public/experience/job-2/index.html
@@ -98,7 +98,7 @@ Responsibilities included training new team members and providing coaching and f
             </li>
             
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="/articles"
+              <a data-scroll class="nav-link" href="https://williamarnberg.com/articles/"
                 >PROJECTS</a
               >
             </li>
