--- a/public/404.html
+++ b/public/404.html
@@ -99,7 +99,7 @@
             </li>
             
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="/articles"
+              <a data-scroll class="nav-link" href="https://williamarnberg.com/articles/"
                 >PROJECTS</a
               >
             </li>
