--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
             </li>
             
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="/articles"
+              <a data-scroll class="nav-link" href="https://williamarnberg.com/articles/"
                 >PROJECTS</a
               >
             </li>
