--- a/public/experience/job-3/index.html
+++ b/public/experience/job-3/index.html
@@ -98,7 +98,7 @@ Created and managed schedules, communicated with clients and other stakeholders,
             </li>
             
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="https://williamarnberg.com/articles/"
+              <a data-scroll class="nav-link" href="/articles"
                 >PROJECTS</a
               >
             </li>
