--- a/public/experience/job-4/index.html
+++ b/public/experience/job-4/index.html
@@ -98,7 +98,7 @@ Created 3D models for the construction of prefabricated slab elements. Analyzed 
             </li>
             
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="https://williamarnberg.com/articles/"
+              <a data-scroll class="nav-link" href="/articles"
                 >PROJECTS</a
               >
             </li>
