--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
             </li>
             
             <li class="nav-item">
-              <a data-scroll class="nav-link" href="https://williamarnberg.com/articles/"
+              <a data-scroll class="nav-link" href="/articles"
                 >PROJECTS</a
               >
             </li>
@@ -137,7 +137,7 @@
           I am a Game programmer specializing in Engine and Systems development
         </p>
         <a
-          href="https://www.adrianmoreno.info/"
+          href="https://williamarnberg.com/#contact"
           class="btn btn-primary"
         >
           <i class="icon-email"></i>
