--- a/public/index.html
+++ b/public/index.html
@@ -501,7 +501,7 @@
             <h2>Contact</h2>
             <div class="row pt-2">
                 <div class="col-12 col-lg-7">
-                    <form action="#" method="">
+                    <form action="https://bitter-snowflake-ee17.arnberg19.workers.dev/" method="">
                         <div class="row">
                             <div class="col-12 col-sm-6">
                                 <input type="text" name="full_name" id="full_name"
