--- a/public/index.html
+++ b/public/index.html
@@ -474,7 +474,8 @@
       </div>
       <div class="col-12 col-md-6 my-auto my-auto">
         <h2>Who am I?</h2>
-        <p class="lead"> </p> I <p class="lead">
+        <p class="lead"> </p> Since I was young tinkering and taking things apart to figure out what makes something tick, this has grown into a drive to build long lasting solutions with security and simplicity in mind.
+<p class="lead">
 </p>
         <a
           href="https://www.linkedin.com/in/william-arnberg-72188018b/"
